Mini style updates

--- a/data/files/web/css/screen.css
+++ b/data/files/web/css/screen.css
@@ -15,3 +15,5 @@ q:before, q:after, blockquote:before, blockquote:after { content: ""; content: n
 a img { border: none; }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary { display: block; }
+
+#wrapper { width: 520px; }
