--- a/data/files/web/scss/ie.scss
+++ b/data/files/web/scss/ie.scss
@@ -1,5 +1,9 @@
-/* Welcome to Compass. Use this file to write IE specific override styles.
- * Import this file using the following HTML or equivalent:
- * <!--[if IE]>
- *   <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
- * <![endif]--> */
+@import "compass/css3";
+@import "compass/utilities/general/clearfix";
+@import "compass/typography/text/replacement";
+@import "compass/utilities/sprites";
+
+@import "partials/base";
+
+// old IEs don't support media queries so put tab styles in here
+@import "partials/tab";
